[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/characters/SheriffBase.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/sheriffs/Dan.png" type="Texture" id=3]

[node name="SheriffBase" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]
skew = 4.37114e-08

[node name="CharacterSprite" type="Sprite" parent="YSort"]
skew = 4.37114e-08
texture = ExtResource( 3 )

[node name="GunHolder" type="YSort" parent="YSort"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
skew = 4.37114e-08

[node name="NicknameLabel" type="Label" parent="."]
margin_left = -19.0
margin_top = -47.0
margin_right = 21.0
margin_bottom = -32.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 15 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
